Языки (вход и рег)

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -45,7 +45,38 @@
     "login_success": "Anmeldung erfolgreich",
     "register_success": "Registrierung erfolgreich",
     "invalid_credentials": "Ungültige Anmeldedaten",
-    "email_verification": "E-Mail-Verifizierung"
+    "email_verification": "E-Mail-Verifizierung",
+    "welcome": "Willkommen",
+    "login_subtitle": "Melden Sie sich bei Ihrem ChiBox-Konto an",
+    "development_mode": "Entwicklungsmodus",
+    "email_address": "E-Mail-Adresse",
+    "email_placeholder": "ihre@email.com",
+    "password_placeholder": "••••••••••",
+    "connecting": "Verbinde...",
+    "login_button": "Bei Konto anmelden",
+    "or": "oder",
+    "no_account_create": "Kein Konto? Neu erstellen",
+    "autofill": "Automatisch ausfüllen",
+    "login_error": "Anmeldefehler. Überprüfen Sie Ihre Daten.",
+    "login_error_generic": "Anmeldefehler. Versuchen Sie es erneut.",
+    "join": "Beitreten",
+    "register_subtitle": "Erstellen Sie ein neues ChiBox-Konto",
+    "username_placeholder": "Ihr Benutzername",
+    "password_min_chars": "Mindestens 6 Zeichen",
+    "bonuses": "Boni",
+    "cases": "Kisten",
+    "prizes": "Preise",
+    "prizes_tooltip": "Warten unten auf Sie",
+    "creating_account": "Konto wird erstellt...",
+    "logging_in": "Anmelden...",
+    "create_account": "Konto erstellen",
+    "have_account_login": "Bereits ein Konto? Anmelden",
+    "passwords_not_match": "Passwörter stimmen nicht überein",
+    "password_min_length": "Passwort muss mindestens 6 Zeichen enthalten",
+    "registration_error": "Registrierungsfehler. Versuchen Sie es erneut.",
+    "try_suggestions": "Versuchen Sie:",
+    "connecting_steam": "Verbinde...",
+    "steam_login_button": "Mit Steam anmelden"
   },
   "cases": {
     "title": "Kisten",
