--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -45,7 +45,38 @@
     "login_success": "Inicio de sesión exitoso",
     "register_success": "Registro exitoso",
     "invalid_credentials": "Credenciales inválidas",
-    "email_verification": "Verificación de correo"
+    "email_verification": "Verificación de correo",
+    "welcome": "Bienvenido",
+    "login_subtitle": "Inicia sesión en tu cuenta ChiBox",
+    "development_mode": "Modo desarrollo",
+    "email_address": "Dirección de correo",
+    "email_placeholder": "tu@email.com",
+    "password_placeholder": "••••••••••",
+    "connecting": "Conectando...",
+    "login_button": "Iniciar sesión en cuenta",
+    "or": "o",
+    "no_account_create": "¿No tienes cuenta? Crear nueva",
+    "autofill": "Autocompletado",
+    "login_error": "Error de inicio de sesión. Verifica tus datos.",
+    "login_error_generic": "Error de inicio de sesión. Inténtalo de nuevo.",
+    "join": "Unirse",
+    "register_subtitle": "Crea una nueva cuenta ChiBox",
+    "username_placeholder": "Tu nombre de usuario",
+    "password_min_chars": "Mínimo 6 caracteres",
+    "bonuses": "Bonos",
+    "cases": "Cajas",
+    "prizes": "Premios",
+    "prizes_tooltip": "Te esperan abajo",
+    "creating_account": "Creando cuenta...",
+    "logging_in": "Iniciando sesión...",
+    "create_account": "Crear cuenta",
+    "have_account_login": "¿Ya tienes cuenta? Iniciar sesión",
+    "passwords_not_match": "Las contraseñas no coinciden",
+    "password_min_length": "La contraseña debe tener al menos 6 caracteres",
+    "registration_error": "Error de registro. Inténtalo de nuevo.",
+    "try_suggestions": "Intenta:",
+    "connecting_steam": "Conectando...",
+    "steam_login_button": "Iniciar sesión con Steam"
   },
   "cases": {
     "title": "Cajas",
