--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -45,7 +45,38 @@
     "login_success": "ログインに成功しました",
     "register_success": "登録に成功しました",
     "invalid_credentials": "認証情報が無効です",
-    "email_verification": "メール認証"
+    "email_verification": "メール認証",
+    "welcome": "ようこそ",
+    "login_subtitle": "ChiBoxアカウントにログインしてください",
+    "development_mode": "開発モード",
+    "email_address": "メールアドレス",
+    "email_placeholder": "your@email.com",
+    "password_placeholder": "••••••••••",
+    "connecting": "接続中...",
+    "login_button": "アカウントにログイン",
+    "or": "または",
+    "no_account_create": "アカウントをお持ちでない方？新規作成",
+    "autofill": "自動入力",
+    "login_error": "ログインエラー。データを確認してください。",
+    "login_error_generic": "ログインエラー。再試行してください。",
+    "join": "参加",
+    "register_subtitle": "新しいChiBoxアカウントを作成してください",
+    "username_placeholder": "ユーザー名",
+    "password_min_chars": "最低6文字",
+    "bonuses": "ボーナス",
+    "cases": "ケース",
+    "prizes": "賞品",
+    "prizes_tooltip": "下でお待ちしています",
+    "creating_account": "アカウント作成中...",
+    "logging_in": "ログイン中...",
+    "create_account": "アカウント作成",
+    "have_account_login": "すでにアカウントをお持ちの方？ログイン",
+    "passwords_not_match": "パスワードが一致しません",
+    "password_min_length": "パスワードは少なくとも6文字である必要があります",
+    "registration_error": "登録エラー。再試行してください。",
+    "try_suggestions": "試してください：",
+    "connecting_steam": "接続中...",
+    "steam_login_button": "Steamでログイン"
   },
   "cases": {
     "title": "ケース",
