--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -45,7 +45,38 @@
     "login_success": "로그인 성공",
     "register_success": "회원가입 성공",
     "invalid_credentials": "잘못된 인증 정보",
-    "email_verification": "이메일 인증"
+    "email_verification": "이메일 인증",
+    "welcome": "환영합니다",
+    "login_subtitle": "ChiBox 계정에 로그인하세요",
+    "development_mode": "개발 모드",
+    "email_address": "이메일 주소",
+    "email_placeholder": "your@email.com",
+    "password_placeholder": "••••••••••",
+    "connecting": "연결 중...",
+    "login_button": "계정 로그인",
+    "or": "또는",
+    "no_account_create": "계정이 없으신가요? 새로 만들기",
+    "autofill": "자동 입력",
+    "login_error": "로그인 오류. 정보를 확인하세요.",
+    "login_error_generic": "로그인 오류. 다시 시도하세요.",
+    "join": "가입하기",
+    "register_subtitle": "새 ChiBox 계정을 만드세요",
+    "username_placeholder": "사용자명",
+    "password_min_chars": "최소 6자",
+    "bonuses": "보너스",
+    "cases": "케이스",
+    "prizes": "상품",
+    "prizes_tooltip": "아래에서 기다리고 있습니다",
+    "creating_account": "계정 생성 중...",
+    "logging_in": "로그인 중...",
+    "create_account": "계정 생성",
+    "have_account_login": "이미 계정이 있으신가요? 로그인",
+    "passwords_not_match": "비밀번호가 일치하지 않습니다",
+    "password_min_length": "비밀번호는 최소 6자 이상이어야 합니다",
+    "registration_error": "회원가입 오류. 다시 시도하세요.",
+    "try_suggestions": "시도해보세요:",
+    "connecting_steam": "연결 중...",
+    "steam_login_button": "Steam으로 로그인"
   },
   "cases": {
     "title": "케이스",
