--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -71,7 +71,25 @@
     "no_account_create": "Нет аккаунта? Создать новый",
     "autofill": "Автозаполнение",
     "login_error": "Ошибка входа. Проверьте данные.",
-    "login_error_generic": "Ошибка входа. Попробуйте снова."
+    "login_error_generic": "Ошибка входа. Попробуйте снова.",
+    "join": "Присоединиться",
+    "register_subtitle": "Создайте новую учетную запись ChiBox",
+    "username_placeholder": "Ваше имя пользователя",
+    "password_min_chars": "Минимум 6 символов",
+    "bonuses": "Бонусы",
+    "cases": "Кейсы",
+    "prizes": "Призы",
+    "prizes_tooltip": "Ждут вас ниже",
+    "creating_account": "Создание аккаунта...",
+    "logging_in": "Вход в систему...",
+    "create_account": "Создать аккаунт",
+    "have_account_login": "Уже есть аккаунт? Войти",
+    "passwords_not_match": "Пароли не совпадают",
+    "password_min_length": "Пароль должен содержать минимум 6 символов",
+    "registration_error": "Ошибка регистрации. Попробуйте снова.",
+    "try_suggestions": "Попробуйте:",
+    "connecting_steam": "Подключение...",
+    "steam_login_button": "Войти через Steam"
   },
   "cases": {
     "title": "Кейсы",
