--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -45,7 +45,38 @@
     "login_success": "登录成功",
     "register_success": "注册成功",
     "invalid_credentials": "登录凭据无效",
-    "email_verification": "邮箱验证"
+    "email_verification": "邮箱验证",
+    "welcome": "欢迎",
+    "login_subtitle": "登录您的ChiBox账户",
+    "development_mode": "开发模式",
+    "email_address": "邮箱地址",
+    "email_placeholder": "your@email.com",
+    "password_placeholder": "••••••••••",
+    "connecting": "连接中...",
+    "login_button": "登录账户",
+    "or": "或",
+    "no_account_create": "还没有账户？创建新账户",
+    "autofill": "自动填充",
+    "login_error": "登录错误。请检查您的数据。",
+    "login_error_generic": "登录错误。请重试。",
+    "join": "加入",
+    "register_subtitle": "创建新的ChiBox账户",
+    "username_placeholder": "您的用户名",
+    "password_min_chars": "最少6个字符",
+    "bonuses": "奖金",
+    "cases": "箱子",
+    "prizes": "奖品",
+    "prizes_tooltip": "在下方等待您",
+    "creating_account": "正在创建账户...",
+    "logging_in": "正在登录...",
+    "create_account": "创建账户",
+    "have_account_login": "已有账户？登录",
+    "passwords_not_match": "密码不匹配",
+    "password_min_length": "密码必须至少包含6个字符",
+    "registration_error": "注册错误。请重试。",
+    "try_suggestions": "尝试：",
+    "connecting_steam": "连接中...",
+    "steam_login_button": "使用Steam登录"
   },
   "cases": {
     "title": "箱子",
