--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -45,7 +45,38 @@
     "login_success": "Connexion réussie",
     "register_success": "Inscription réussie",
     "invalid_credentials": "Identifiants invalides",
-    "email_verification": "Vérification e-mail"
+    "email_verification": "Vérification e-mail",
+    "welcome": "Bienvenue",
+    "login_subtitle": "Connectez-vous à votre compte ChiBox",
+    "development_mode": "Mode développement",
+    "email_address": "Adresse e-mail",
+    "email_placeholder": "votre@email.com",
+    "password_placeholder": "••••••••••",
+    "connecting": "Connexion...",
+    "login_button": "Se connecter au compte",
+    "or": "ou",
+    "no_account_create": "Pas de compte ? Créer un nouveau",
+    "autofill": "Remplissage automatique",
+    "login_error": "Erreur de connexion. Vérifiez vos données.",
+    "login_error_generic": "Erreur de connexion. Réessayez.",
+    "join": "Rejoindre",
+    "register_subtitle": "Créez un nouveau compte ChiBox",
+    "username_placeholder": "Votre nom d'utilisateur",
+    "password_min_chars": "Minimum 6 caractères",
+    "bonuses": "Bonus",
+    "cases": "Caisses",
+    "prizes": "Prix",
+    "prizes_tooltip": "Vous attendent ci-dessous",
+    "creating_account": "Création du compte...",
+    "logging_in": "Connexion...",
+    "create_account": "Créer un compte",
+    "have_account_login": "Déjà un compte ? Se connecter",
+    "passwords_not_match": "Les mots de passe ne correspondent pas",
+    "password_min_length": "Le mot de passe doit contenir au moins 6 caractères",
+    "registration_error": "Erreur d'inscription. Réessayez.",
+    "try_suggestions": "Essayez :",
+    "connecting_steam": "Connexion...",
+    "steam_login_button": "Se connecter avec Steam"
   },
   "cases": {
     "title": "Caisses",
