Уведомления (ошибка языка)

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -382,6 +382,53 @@
     "start_playing": "Spielen beginnen",
     "bonus_received": "Du hast einen Startbonus erhalten!"
   },
+  "notifications": {
+    "no_notifications": "Keine Benachrichtigungen",
+    "mark_all_read": "Alle als gelesen markieren",
+    "case_won": "Kisten-Gewinn",
+    "achievement_unlocked": "Erfolg freigeschaltet",
+    "bonus_available": "Bonus verfügbar",
+    "subscription_expiring": "Abonnement läuft ab",
+    "new_items": "Neue Gegenstände hinzugefügt",
+    "title": "Benachrichtigungen",
+    "mark_all_notifications_read": "Alle Benachrichtigungen als gelesen markieren",
+    "no_new_notifications": "Keine neuen Benachrichtigungen",
+    "new_notifications_appear_here": "Neue Benachrichtigungen werden hier erscheinen",
+    "showing_count_notifications": "{{count}} Benachrichtigungen angezeigt",
+    "unread": "ungelesen",
+    "mark_all_as_read": "Alle als gelesen markieren",
+    "just_now": "Gerade eben",
+    "minutes_ago": "vor {{minutes}} Min",
+    "hours_ago": "vor {{hours}} Std",
+    "days_ago": "vor {{days}} Tagen",
+    "error_marking_read_on_close": "Fehler beim Markieren der Benachrichtigungen als gelesen beim Schließen:",
+    "error_marking_notification_read": "Fehler beim Markieren der Benachrichtigung als gelesen:",
+    "error_marking_all_read": "Fehler beim Markieren aller Benachrichtigungen als gelesen:",
+    "notification_types": {
+      "case_purchase": "Kisten-Kauf",
+      "case_purchase_message": "Sie haben erfolgreich {{count}} Kiste(n) für {{amount}}₽ gekauft",
+      "level_up": "Level-Aufstieg",
+      "level_up_message": "Glückwunsch! Sie haben Level {{level}} erreicht. Bonus für seltene Gegenstände: +{{bonus}}%",
+      "new_case_received": "Neue Kiste erhalten!",
+      "new_case_received_message": "Sie haben eine Kiste erhalten: {{caseName}}",
+      "case_opened": "Kiste geöffnet",
+      "case_opened_message": "Sie haben eine Kiste geöffnet und erhalten: {{itemName}}",
+      "bonus_claimed": "Bonus erhalten",
+      "bonus_claimed_message": "Sie haben einen Bonus erhalten: {{amount}}₽",
+      "achievement_unlocked": "Erfolg freigeschaltet",
+      "achievement_unlocked_message": "Glückwunsch! Sie haben den Erfolg freigeschaltet: {{achievementName}}",
+      "subscription_activated": "Abonnement aktiviert",
+      "subscription_activated_message": "Ihr {{tierName}}-Abonnement ist für {{days}} Tage aktiviert",
+      "subscription_expiring": "Abonnement läuft ab",
+      "subscription_expiring_message": "Ihr Abonnement läuft in {{days}} Tagen ab",
+      "item_withdrawn": "Gegenstand ausgezahlt",
+      "item_withdrawn_message": "Gegenstand {{itemName}} erfolgreich an Steam gesendet",
+      "item_sold": "Gegenstand verkauft",
+      "item_sold_message": "Gegenstand {{itemName}} für {{amount}}₽ verkauft",
+      "welcome": "Willkommen!",
+      "welcome_message": "Willkommen bei ChiBox! Holen Sie sich Ihren ersten Bonus und beginnen Sie zu spielen!"
+    }
+  },
   "notifications_header": {
     "title": "Benachrichtigungen",
     "no_notifications": "Keine neuen Benachrichtigungen",
