--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -370,7 +370,45 @@
     "achievement_unlocked": "Achievement Unlocked",
     "bonus_available": "Bonus Available",
     "subscription_expiring": "Subscription Expiring",
-    "new_items": "New Items Added"
+    "new_items": "New Items Added",
+    "title": "Notifications",
+    "mark_all_notifications_read": "Mark all notifications as read",
+    "no_new_notifications": "No new notifications",
+    "new_notifications_appear_here": "New notifications will appear here",
+    "showing_count_notifications": "Showing {{count}} notifications",
+    "unread": "unread",
+    "mark_all_as_read": "Mark all as read",
+    "just_now": "Just now",
+    "minutes_ago": "{{minutes}} min ago",
+    "hours_ago": "{{hours}} h ago",
+    "days_ago": "{{days}} d ago",
+    "error_marking_read_on_close": "Error marking notifications as read on close:",
+    "error_marking_notification_read": "Error marking notification as read:",
+    "error_marking_all_read": "Error marking all notifications as read:",
+    "notification_types": {
+      "case_purchase": "Case Purchase",
+      "case_purchase_message": "You successfully bought {{count}} case(s) for {{amount}}₽",
+      "level_up": "Level Up",
+      "level_up_message": "Congratulations! You reached level {{level}}. Rare items bonus: +{{bonus}}%",
+      "new_case_received": "New Case Received!",
+      "new_case_received_message": "You received a case: {{caseName}}",
+      "case_opened": "Case Opened",
+      "case_opened_message": "You opened a case and received: {{itemName}}",
+      "bonus_claimed": "Bonus Claimed",
+      "bonus_claimed_message": "You received a bonus: {{amount}}₽",
+      "achievement_unlocked": "Achievement Unlocked",
+      "achievement_unlocked_message": "Congratulations! You unlocked achievement: {{achievementName}}",
+      "subscription_activated": "Subscription Activated",
+      "subscription_activated_message": "Your {{tierName}} subscription is activated for {{days}} days",
+      "subscription_expiring": "Subscription Expiring",
+      "subscription_expiring_message": "Your subscription expires in {{days}} days",
+      "item_withdrawn": "Item Withdrawn",
+      "item_withdrawn_message": "Item {{itemName}} successfully sent to Steam",
+      "item_sold": "Item Sold",
+      "item_sold_message": "Item {{itemName}} sold for {{amount}}₽",
+      "welcome": "Welcome!",
+      "welcome_message": "Welcome to ChiBox! Get your first bonus and start playing!"
+    }
   },
   "language": {
     "title": "Language",
