--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -378,6 +378,53 @@
     "start_playing": "Comenzar a Jugar",
     "bonus_received": "¡Recibiste un bonus de inicio!"
   },
+  "notifications": {
+    "no_notifications": "Sin notificaciones",
+    "mark_all_read": "Marcar todo como leído",
+    "case_won": "Ganancia de Caja",
+    "achievement_unlocked": "Logro Desbloqueado",
+    "bonus_available": "Bonus Disponible",
+    "subscription_expiring": "Suscripción Expirando",
+    "new_items": "Nuevos Objetos Añadidos",
+    "title": "Notificaciones",
+    "mark_all_notifications_read": "Marcar todas las notificaciones como leídas",
+    "no_new_notifications": "Sin notificaciones nuevas",
+    "new_notifications_appear_here": "Las nuevas notificaciones aparecerán aquí",
+    "showing_count_notifications": "Mostrando {{count}} notificaciones",
+    "unread": "sin leer",
+    "mark_all_as_read": "Marcar todo como leído",
+    "just_now": "Ahora mismo",
+    "minutes_ago": "hace {{minutes}} min",
+    "hours_ago": "hace {{hours}} h",
+    "days_ago": "hace {{days}} días",
+    "error_marking_read_on_close": "Error al marcar notificaciones como leídas al cerrar:",
+    "error_marking_notification_read": "Error al marcar notificación como leída:",
+    "error_marking_all_read": "Error al marcar todas las notificaciones como leídas:",
+    "notification_types": {
+      "case_purchase": "Compra de Cajas",
+      "case_purchase_message": "Compraste exitosamente {{count}} caja(s) por {{amount}}₽",
+      "level_up": "Subida de Nivel",
+      "level_up_message": "¡Felicidades! Alcanzaste el nivel {{level}}. Bonus para objetos raros: +{{bonus}}%",
+      "new_case_received": "¡Nueva Caja Recibida!",
+      "new_case_received_message": "Recibiste una caja: {{caseName}}",
+      "case_opened": "Caja Abierta",
+      "case_opened_message": "Abriste una caja y recibiste: {{itemName}}",
+      "bonus_claimed": "Bonus Reclamado",
+      "bonus_claimed_message": "Recibiste un bonus: {{amount}}₽",
+      "achievement_unlocked": "Logro Desbloqueado",
+      "achievement_unlocked_message": "¡Felicidades! Desbloqueaste el logro: {{achievementName}}",
+      "subscription_activated": "Suscripción Activada",
+      "subscription_activated_message": "Tu suscripción {{tierName}} está activada por {{days}} días",
+      "subscription_expiring": "Suscripción Expirando",
+      "subscription_expiring_message": "Tu suscripción expira en {{days}} días",
+      "item_withdrawn": "Objeto Retirado",
+      "item_withdrawn_message": "Objeto {{itemName}} enviado exitosamente a Steam",
+      "item_sold": "Objeto Vendido",
+      "item_sold_message": "Objeto {{itemName}} vendido por {{amount}}₽",
+      "welcome": "¡Bienvenido!",
+      "welcome_message": "¡Bienvenido a ChiBox! ¡Obtén tu primer bonus y comienza a jugar!"
+    }
+  },
   "notifications_header": {
     "title": "Notificaciones",
     "no_notifications": "No hay notificaciones nuevas",
