--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -378,6 +378,53 @@
     "start_playing": "Commencer à Jouer",
     "bonus_received": "Vous avez reçu un bonus de départ !"
   },
+  "notifications": {
+    "no_notifications": "Aucune notification",
+    "mark_all_read": "Marquer tout comme lu",
+    "case_won": "Gain de Caisse",
+    "achievement_unlocked": "Succès Débloqué",
+    "bonus_available": "Bonus Disponible",
+    "subscription_expiring": "Abonnement Expirant",
+    "new_items": "Nouveaux Objets Ajoutés",
+    "title": "Notifications",
+    "mark_all_notifications_read": "Marquer toutes les notifications comme lues",
+    "no_new_notifications": "Aucune nouvelle notification",
+    "new_notifications_appear_here": "Les nouvelles notifications apparaîtront ici",
+    "showing_count_notifications": "Affichage de {{count}} notifications",
+    "unread": "non lues",
+    "mark_all_as_read": "Marquer tout comme lu",
+    "just_now": "À l'instant",
+    "minutes_ago": "il y a {{minutes}} min",
+    "hours_ago": "il y a {{hours}} h",
+    "days_ago": "il y a {{days}} jours",
+    "error_marking_read_on_close": "Erreur lors du marquage des notifications comme lues à la fermeture :",
+    "error_marking_notification_read": "Erreur lors du marquage de la notification comme lue :",
+    "error_marking_all_read": "Erreur lors du marquage de toutes les notifications comme lues :",
+    "notification_types": {
+      "case_purchase": "Achat de Caisses",
+      "case_purchase_message": "Vous avez acheté avec succès {{count}} caisse(s) pour {{amount}}₽",
+      "level_up": "Montée de Niveau",
+      "level_up_message": "Félicitations ! Vous avez atteint le niveau {{level}}. Bonus objets rares : +{{bonus}}%",
+      "new_case_received": "Nouvelle Caisse Reçue !",
+      "new_case_received_message": "Vous avez reçu une caisse : {{caseName}}",
+      "case_opened": "Caisse Ouverte",
+      "case_opened_message": "Vous avez ouvert une caisse et reçu : {{itemName}}",
+      "bonus_claimed": "Bonus Réclamé",
+      "bonus_claimed_message": "Vous avez reçu un bonus : {{amount}}₽",
+      "achievement_unlocked": "Succès Débloqué",
+      "achievement_unlocked_message": "Félicitations ! Vous avez débloqué le succès : {{achievementName}}",
+      "subscription_activated": "Abonnement Activé",
+      "subscription_activated_message": "Votre abonnement {{tierName}} est activé pour {{days}} jours",
+      "subscription_expiring": "Abonnement Expirant",
+      "subscription_expiring_message": "Votre abonnement expire dans {{days}} jours",
+      "item_withdrawn": "Objet Retiré",
+      "item_withdrawn_message": "Objet {{itemName}} envoyé avec succès sur Steam",
+      "item_sold": "Objet Vendu",
+      "item_sold_message": "Objet {{itemName}} vendu pour {{amount}}₽",
+      "welcome": "Bienvenue !",
+      "welcome_message": "Bienvenue chez ChiBox ! Obtenez votre premier bonus et commencez à jouer !"
+    }
+  },
   "notifications_header": {
     "title": "Notifications",
     "no_notifications": "Aucune nouvelle notification",
