--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -378,6 +378,53 @@
     "start_playing": "プレイ開始",
     "bonus_received": "スタートボーナスを受け取りました！"
   },
+  "notifications": {
+    "no_notifications": "通知なし",
+    "mark_all_read": "すべて既読にする",
+    "case_won": "ケース勝利",
+    "achievement_unlocked": "実績解除",
+    "bonus_available": "ボーナス利用可能",
+    "subscription_expiring": "サブスクリプション期限切れ",
+    "new_items": "新しいアイテムが追加されました",
+    "title": "通知",
+    "mark_all_notifications_read": "すべての通知を既読にする",
+    "no_new_notifications": "新しい通知はありません",
+    "new_notifications_appear_here": "新しい通知がここに表示されます",
+    "showing_count_notifications": "{{count}}件の通知を表示",
+    "unread": "未読",
+    "mark_all_as_read": "すべて既読にする",
+    "just_now": "たった今",
+    "minutes_ago": "{{minutes}}分前",
+    "hours_ago": "{{hours}}時間前",
+    "days_ago": "{{days}}日前",
+    "error_marking_read_on_close": "クローズ時の通知既読エラー：",
+    "error_marking_notification_read": "通知既読エラー：",
+    "error_marking_all_read": "全通知既読エラー：",
+    "notification_types": {
+      "case_purchase": "ケース購入",
+      "case_purchase_message": "{{count}}個のケースを{{amount}}₽で正常に購入しました",
+      "level_up": "レベルアップ",
+      "level_up_message": "おめでとうございます！レベル{{level}}に到達しました。レアアイテムボーナス：+{{bonus}}%",
+      "new_case_received": "新しいケースを受け取りました！",
+      "new_case_received_message": "ケースを受け取りました：{{caseName}}",
+      "case_opened": "ケース開封",
+      "case_opened_message": "ケースを開封し、以下を獲得しました：{{itemName}}",
+      "bonus_claimed": "ボーナス獲得",
+      "bonus_claimed_message": "ボーナスを受け取りました：{{amount}}₽",
+      "achievement_unlocked": "実績解除",
+      "achievement_unlocked_message": "おめでとうございます！実績を解除しました：{{achievementName}}",
+      "subscription_activated": "サブスクリプション有効化",
+      "subscription_activated_message": "{{tierName}}サブスクリプションが{{days}}日間有効化されました",
+      "subscription_expiring": "サブスクリプション期限切れ",
+      "subscription_expiring_message": "サブスクリプションが{{days}}日後に期限切れになります",
+      "item_withdrawn": "アイテム引き出し",
+      "item_withdrawn_message": "アイテム{{itemName}}がSteamに正常に送信されました",
+      "item_sold": "アイテム売却",
+      "item_sold_message": "アイテム{{itemName}}を{{amount}}₽で売却しました",
+      "welcome": "ようこそ！",
+      "welcome_message": "ChiBoxへようこそ！最初のボーナスを受け取ってプレイを開始しましょう！"
+    }
+  },
   "notifications_header": {
     "title": "通知",
     "no_notifications": "新しい通知はありません",
