--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -378,6 +378,53 @@
     "start_playing": "플레이 시작",
     "bonus_received": "시작 보너스를 받았습니다!"
   },
+  "notifications": {
+    "no_notifications": "알림 없음",
+    "mark_all_read": "모두 읽음으로 표시",
+    "case_won": "케이스 승리",
+    "achievement_unlocked": "업적 잠금 해제",
+    "bonus_available": "보너스 사용 가능",
+    "subscription_expiring": "구독 만료",
+    "new_items": "새 아이템 추가됨",
+    "title": "알림",
+    "mark_all_notifications_read": "모든 알림을 읽음으로 표시",
+    "no_new_notifications": "새 알림 없음",
+    "new_notifications_appear_here": "새 알림이 여기에 나타납니다",
+    "showing_count_notifications": "{{count}}개의 알림 표시",
+    "unread": "읽지 않음",
+    "mark_all_as_read": "모두 읽음으로 표시",
+    "just_now": "방금",
+    "minutes_ago": "{{minutes}}분 전",
+    "hours_ago": "{{hours}}시간 전",
+    "days_ago": "{{days}}일 전",
+    "error_marking_read_on_close": "닫을 때 알림 읽음 표시 오류:",
+    "error_marking_notification_read": "알림 읽음 표시 오류:",
+    "error_marking_all_read": "모든 알림 읽음 표시 오류:",
+    "notification_types": {
+      "case_purchase": "케이스 구매",
+      "case_purchase_message": "{{count}}개의 케이스를 {{amount}}₽에 성공적으로 구매했습니다",
+      "level_up": "레벨 업",
+      "level_up_message": "축하합니다! 레벨 {{level}}에 도달했습니다. 희귀 아이템 보너스: +{{bonus}}%",
+      "new_case_received": "새 케이스 받음!",
+      "new_case_received_message": "케이스를 받았습니다: {{caseName}}",
+      "case_opened": "케이스 열림",
+      "case_opened_message": "케이스를 열고 다음을 받았습니다: {{itemName}}",
+      "bonus_claimed": "보너스 획득",
+      "bonus_claimed_message": "보너스를 받았습니다: {{amount}}₽",
+      "achievement_unlocked": "업적 잠금 해제",
+      "achievement_unlocked_message": "축하합니다! 업적을 잠금 해제했습니다: {{achievementName}}",
+      "subscription_activated": "구독 활성화",
+      "subscription_activated_message": "{{tierName}} 구독이 {{days}}일 동안 활성화되었습니다",
+      "subscription_expiring": "구독 만료",
+      "subscription_expiring_message": "구독이 {{days}}일 후에 만료됩니다",
+      "item_withdrawn": "아이템 출금",
+      "item_withdrawn_message": "아이템 {{itemName}}이 Steam으로 성공적으로 전송되었습니다",
+      "item_sold": "아이템 판매",
+      "item_sold_message": "아이템 {{itemName}}을 {{amount}}₽에 판매했습니다",
+      "welcome": "환영합니다!",
+      "welcome_message": "ChiBox에 오신 것을 환영합니다! 첫 번째 보너스를 받고 플레이를 시작하세요!"
+    }
+  },
   "notifications_header": {
     "title": "알림",
     "no_notifications": "새 알림 없음",
