--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -369,7 +369,45 @@
     "achievement_unlocked": "Достижение разблокировано",
     "bonus_available": "Доступен бонус",
     "subscription_expiring": "Подписка истекает",
-    "new_items": "Новые предметы добавлены"
+    "new_items": "Новые предметы добавлены",
+    "title": "Уведомления",
+    "mark_all_notifications_read": "Прочитать все уведомления",
+    "no_new_notifications": "Нет новых уведомлений",
+    "new_notifications_appear_here": "Новые уведомления появятся здесь",
+    "showing_count_notifications": "Показано {{count}} уведомлений",
+    "unread": "непрочитанных",
+    "mark_all_as_read": "Отметить все как прочитанные",
+    "just_now": "Сейчас",
+    "minutes_ago": "{{minutes}} мин назад",
+    "hours_ago": "{{hours}} ч назад",
+    "days_ago": "{{days}} дн назад",
+    "error_marking_read_on_close": "Ошибка при прочтении уведомлений при закрытии:",
+    "error_marking_notification_read": "Ошибка при отметке уведомления как прочитанного:",
+    "error_marking_all_read": "Ошибка при отметке всех уведомлений как прочитанных:",
+    "notification_types": {
+      "case_purchase": "Покупка кейсов",
+      "case_purchase_message": "Вы успешно купили {{count}} кейс(ов) за {{amount}}₽",
+      "level_up": "Повышение уровня",
+      "level_up_message": "Поздравляем! Вы достигли уровня {{level}}. Бонус к шансу дорогих предметов: +{{bonus}}%",
+      "new_case_received": "Новый кейс получен!",
+      "new_case_received_message": "Вы получили кейс: {{caseName}}",
+      "case_opened": "Кейс открыт",
+      "case_opened_message": "Вы открыли кейс и получили: {{itemName}}",
+      "bonus_claimed": "Бонус получен",
+      "bonus_claimed_message": "Вы получили бонус: {{amount}}₽",
+      "achievement_unlocked": "Достижение разблокировано",
+      "achievement_unlocked_message": "Поздравляем! Вы разблокировали достижение: {{achievementName}}",
+      "subscription_activated": "Подписка активирована",
+      "subscription_activated_message": "Ваша подписка {{tierName}} активирована на {{days}} дней",
+      "subscription_expiring": "Подписка истекает",
+      "subscription_expiring_message": "Ваша подписка истекает через {{days}} дней",
+      "item_withdrawn": "Предмет выведен",
+      "item_withdrawn_message": "Предмет {{itemName}} успешно отправлен в Steam",
+      "item_sold": "Предмет продан",
+      "item_sold_message": "Предмет {{itemName}} продан за {{amount}}₽",
+      "welcome": "Добро пожаловать!",
+      "welcome_message": "Добро пожаловать в ChiBox! Получите свой первый бонус и начните играть!"
+    }
   },
   "language": {
     "title": "Язык",
