--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -378,6 +378,53 @@
     "start_playing": "开始游戏",
     "bonus_received": "您获得了新手奖励！"
   },
+  "notifications": {
+    "no_notifications": "无通知",
+    "mark_all_read": "全部标记为已读",
+    "case_won": "箱子胜利",
+    "achievement_unlocked": "成就已解锁",
+    "bonus_available": "奖励可用",
+    "subscription_expiring": "订阅即将到期",
+    "new_items": "新物品已添加",
+    "title": "通知",
+    "mark_all_notifications_read": "将所有通知标记为已读",
+    "no_new_notifications": "没有新通知",
+    "new_notifications_appear_here": "新通知将在此处显示",
+    "showing_count_notifications": "显示 {{count}} 条通知",
+    "unread": "未读",
+    "mark_all_as_read": "全部标记为已读",
+    "just_now": "刚刚",
+    "minutes_ago": "{{minutes}}分钟前",
+    "hours_ago": "{{hours}}小时前",
+    "days_ago": "{{days}}天前",
+    "error_marking_read_on_close": "关闭时标记通知为已读错误：",
+    "error_marking_notification_read": "标记通知为已读错误：",
+    "error_marking_all_read": "标记所有通知为已读错误：",
+    "notification_types": {
+      "case_purchase": "购买箱子",
+      "case_purchase_message": "您成功购买了{{count}}个箱子，花费{{amount}}₽",
+      "level_up": "升级",
+      "level_up_message": "恭喜！您达到了{{level}}级。稀有物品奖励：+{{bonus}}%",
+      "new_case_received": "获得新箱子！",
+      "new_case_received_message": "您获得了箱子：{{caseName}}",
+      "case_opened": "开启箱子",
+      "case_opened_message": "您开启了箱子并获得：{{itemName}}",
+      "bonus_claimed": "奖励已领取",
+      "bonus_claimed_message": "您获得了奖励：{{amount}}₽",
+      "achievement_unlocked": "成就已解锁",
+      "achievement_unlocked_message": "恭喜！您解锁了成就：{{achievementName}}",
+      "subscription_activated": "订阅已激活",
+      "subscription_activated_message": "您的{{tierName}}订阅已激活{{days}}天",
+      "subscription_expiring": "订阅即将到期",
+      "subscription_expiring_message": "您的订阅将在{{days}}天后到期",
+      "item_withdrawn": "物品已提取",
+      "item_withdrawn_message": "物品{{itemName}}已成功发送到Steam",
+      "item_sold": "物品已出售",
+      "item_sold_message": "物品{{itemName}}以{{amount}}₽出售",
+      "welcome": "欢迎！",
+      "welcome_message": "欢迎来到ChiBox！获取您的第一个奖励并开始游戏！"
+    }
+  },
   "notifications_header": {
     "title": "通知",
     "no_notifications": "没有新通知",
